-----BEGIN PGP PRIVATE KEY BLOCK-----
lQPGBF4Voj4BCADMadISO9yCDWMqaIvLSpLbazvjz7Y5Sqdzn7dW0dt1LLbxlnGw
PAq4THeI5/6plotK1sOMVFh7iy57kwYUgzKnWnW5hNDPtaTCWDmrOftiHm0Q/fj2
Zsy3aX0XuySQz7oycTnQ52p3zqGDlnH7zgPQV9dCCAIQMFbJZkoNpZxMRMN2Lnph
112Oi7ujO5/gIcrxLBQXe9zHVU9DT1C1JjY4eTajU9vg+muslwhoT633vYvuhj1q
UBnn6ZLUitw+Z8d6S9B8SEqcbd5O3ODGKhToDK9tC8rZCDFgmgcZYAZnuaJ2/bQB
uePiCKf4jkGpdtpAB4HIr2lGvK2rWbW0l2KpABEBAAH+BwMCQtDwzCTcteP/Cbg9
9DugKCnTbSsnUwAuA+oWUdkVCkrL6pvFIPXkgpCq7Af2E3JLgYnKK6AVsbDkHPS2
+UeZRgfnoYZJBH59pHbjwQuz7nKF10BikDIQwc5+fNuIg+GgD3bfsRrRwQMkrl5/
T3KVnw8I6TinGGsdA+UpODf61UQNYajuAq3P3GswpvbpYHLadHz5hmRjYzTRUnfX
jn26DhxRH6m6ulp630QHTvDCzI6TrlvgI4ZGaowBCGbBuDb+gUL3HaBtm8ZDokRH
pa5FtI1kpujigZuZ0AvmeFXOwZsAsPsC1msmnq5PlOULovuY9/8tEgPBjV1jee7u
9ZOnsdmO06SQ2o7FLL7sVZW8xK0WeRZMHiv/sm+yYI5q+EFJXYBpHMUO3Q+xwNk6
64Uj1PnYLjTM0VRrt144LOpyGCuBBmeGqCVp1HTHshK2qSv+hZXFYowl0ia7BQpm
Lh2dkUQs2pa5WmD8XHJnPdXN5FOXJvnLNHgreAwklXk2+TDXT00Vb5dYfvZ1p2Cp
IWmx6gV8qUy9EQIHp0vTLJPbF1t2YQGvUrHdcDrHPW83gF6ydMmdtfSASfP47ZU9
Xkyqj7WdyZz+q0heW1R5MUxrYYK0hkSN1wiB/SR+giOuEwJ8qX95cs1PuJXmYZrp
zwrR2oKMrzWR78zi2rDHoTQUEj/y4RU/wOQReMUHHljFv8ROfLGMs/zJUVKkq7uB
DODWFM1XA/uhpI8rwIyox3tiBf4v2PFzwotUAiOrpHej8LochTMoTxL4nglsAEbw
K9e0gzAzYyiR1EHBdIIsAY2pwkxZz52aFqL0KwxKtBFYWx/VApm+FcT0OQsJO3VU
YFR11x5pAf1cmfq36SoCiq5HQnyHRYNzJ9k2b1P6QK6as4+ZWSw3f/Mmfcbe4Swt
I+hFG77L8oOltEhtb3NpcCAoVGhpcyBpcyBtb3NpcCBtYXZlbiBjZW50cmFsIHJl
cG8pIDxtb3NpcC5lbWFpbG5vdGlmaWVyQGdtYWlsLmNvbT6JAT8EEwECACkFAl4V
oj4CGwMFCQPCZwAHCwkIBwMCAQYVCAIJCgsEFgIDAQIeAQIXgAAKCRBO51UqH9Be
ZNhACACnX5S8h/B/dyBWDlmULbXtOwrbuUoFm4AaQSlGKrkxaYQzoaZTAef3IpOX
mN50sLoVmtbum8Kv0ehr5Z7B+SVJJiDPKBBwseBqkeWavC6GWs6q1cnFgZGaeyIy
gNpHNTMoS1Ey5nT7vf5qIu/GUQAb0lutuDVYkscqMqQDJeIR4+KpS9iBAxMr9vzs
Cs/k7e88pOv5hc6bXtzM2rEnSw3bec4SBrPkKH2SOyKkNQvxkmt0dd7JYl3fvRf+
/nncitdLIoEQi+UrJjN2M/0In3hOfkXeSvb8eTUy7wj6DXXRYRaV6Xg/DdyS3YfP
JoPgETrCNbSTwLscfyWkt9+TOfvZnQPFBF4Voj4BCACrlB3BHx0yiJ8pTo/dyXgk
rWwVAtmnmozWUwEhnb+tk5RUybILchwu/m+lGF73cAQfiWwmtTb+d7lab5dp6wNS
phJtsMAhId8EN0PJNig0NiZtAD6UzQnVcnD4zdaQ8IKsGA5Ar/AfWXQvQrhWP4b1
OCjpIJPjmMokDQtiMCrdLSqBjOHlG+3lbZRUPbfkNGq2l83n002M3D9pEi3emSDz
coSU0kYkVkW1y8k0bzEAJJeJBfbKdyt6rbgeUPRhqT+zSZheCwdQMSo2A39dpxU/
X6n48yKlvIt4AXOloCNW1u1eVU8O666gqwFKyQn9xyb+uzydO4CWLzarLQombbwZ
ABEBAAH+BwMCNYo5MHWGGLn/A7ZeeuCoZfgxQVb4pNZBvW94/Oqd7gP8Rb4MOqry
0cTzy8fr8fLvE2PRCVdhAMyvenSZKzKPz5+JWN9ZiE62Xgfy3Waq8Ij6HKf4K6zb
zwyPMwDKx8DySCxOPgvT/bYVQh9S2xGD9FGdYEcJXRJbOgbSlwLC/aJeS4NEuoMg
TzD5bp4bMnzO9BGnuQJ/NT7w91Bw6PssXEAUXj8wHHIeelBj+s7+du/LVWa7R2eh
2JWwAbFZQfD1mkxXS8M6qcHqeSwuvrngM1A7EBsCkOhiG4dB6hAELes9lDtNy/LU
QS6pOZdzd+hffISRPXOEyumZHwPtVTgeHO0zyM6C//bHu9UcecRL+SReZjcQDfYc
i3VKJeejDYvpUavhFLZe8dWZe57Cgx/fbgU5yHUDr6srphLquCTvqOHIIsuNAxEF
4sQNU88p2aBGqIhF9K/LYFvJCXHtkAs2KjU/uYZrmtSr2z6hj4ENvIsI0hLpzE/M
ltpypXZxMQ/MVRUq9KmQHFF7KLvkHkpL2cBEV9oFITLIkHhWjqT3XYy3YiLn/OVW
w8JGi5m7xcwy8peV8wD4v2eHKq1uJL4R36j6g9+TgFdRLQ6j7r/kC5IBJ1+LusEL
Z1mLD0Mr2tyAvZPYrC3TCxSlRstw8dlRgY96pDnGPApR+rOnFNc/hkrk6xsTSy+R
Povhr/kQljNrcHe5ofhtiRh5Zg3jQdjcs2OuKvDaGfAJnzkUrtm5t12jvzLylRrZ
9mbeHg4zF44bawMms00eRRn1+gzATmwGlnh+n78sr+ddJOCAo+qt5jRccs89BqB5
8ADCRkD2jbF87pOjH81k8Tl9kkBzlxN7T/8MeH2zDLSim04Jw2b+XtCRFUE6kXp9
nuXevQDiyMUHG0gEXXu/pQARhfOu+b77PDH1JtmJASUEGAECAA8FAl4Voj4CGwwF
CQPCZwAACgkQTudVKh/QXmQRQwf/cGctCLHQ/28mruUo6bFTTw6Euwruzo33eIxQ
3iO83u/AyIF1rCK21kbtfFHW14RVDSWThCt5ckDr8aTdnBo0sgB1Xthoq+4P+fqp
DDPtvMKRlPji+3owH7qfLx5gFIeqLZLYRzxrkOzdqGJPSVSr5ujoz7FnTG+eIiUt
sV0PBU7N6KEUuv24rpEa4KGJl+tqAyQ+AnAod1LzFLJV7Quy/xV/uIZj8f8Fmvoj
jrrQPsy4DnI0teUgfqR+OyR8BwezSVq//p8ZpGwlOrTjHcs50gk4mDKBdwCnrsXA
LKQ+OeBIqHqvlmegsmOmNu/EP4kp1TT+k9S2ugnTjXWjgUaXQA==
=6YF6
-----END PGP PRIVATE KEY BLOCK-----
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.mosip.bio.utils</groupId>
	<artifactId>bioutils</artifactId>
	<packaging>jar</packaging>
	<version>1.2.1-SNAPSHOT</version>
	<name>biometrics-util-test</name>
	<url>https://github.com/mosip/bio-utils</url>
	<description>This utility is used to Test the Biomnetric Util Repo
		functionalties.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>

		<!-- maven -->
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.version>3.11.0</maven.compiler.version>
		<maven.jar.plugin.version>3.4.0</maven.jar.plugin.version>
		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
		<maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
		<maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>

		<!-- spring -->
		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>

		<!-- opencv -->
		<openpnp.opencv.version>4.5.3-4</openpnp.opencv.version>

		<!-- utilities -->
		<okhttp.version>2.7.5</okhttp.version>
		<google.protobuf.version>3.13.0</google.protobuf.version>
		<jai.imageio.jpeg2000.version>1.3.0</jai.imageio.jpeg2000.version>
		<github.mhshams.jnbis.version>2.0.2</github.mhshams.jnbis.version>
		<imgscalr.lib.version>4.2</imgscalr.lib.version>
		
		<!-- fasterxml jackson-->
		<com.fasterxml.jackson.databind.version>2.15.0</com.fasterxml.jackson.databind.version>
		<com.fasterxml.jackson.core.version>2.15.0</com.fasterxml.jackson.core.version>

		<!-- Mosip -->
		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
		<kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
		<mosip.biometrics.util.version>1.2.1-SNAPSHOT</mosip.biometrics.util.version>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.mosip.kernel</groupId>
				<artifactId>kernel-bom</artifactId>
				<version>${kernel.bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>io.mosip.biometric.util</groupId>
			<artifactId>biometrics-util</artifactId>
			<version>${mosip.biometrics.util.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.core.version}</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp</groupId>
			<artifactId>okhttp</artifactId>
			<version>${okhttp.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>${google.protobuf.version}</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-jpeg2000 -->
		<dependency>
			<groupId>com.github.jai-imageio</groupId>
			<artifactId>jai-imageio-jpeg2000</artifactId>
			<version>${jai.imageio.jpeg2000.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.mhshams/jnbis -->
		<dependency>
			<groupId>com.github.mhshams</groupId>
			<artifactId>jnbis</artifactId>
			<version>${github.mhshams.jnbis.version}</version>
		</dependency>
		<dependency>
			<groupId>org.imgscalr</groupId>
			<artifactId>imgscalr-lib</artifactId>
			<version>${imgscalr.lib.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openpnp</groupId>
			<artifactId>opencv</artifactId>
			<version>${openpnp.opencv.version}</version>
		</dependency>
	</dependencies>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<skip>false</skip>
					<argLine>
						${argLine}
						--add-modules=ALL-SYSTEM
						--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens java.base/java.lang.stream=ALL-UNNAMED
						--add-opens java.base/java.time=ALL-UNNAMED
						--add-opens java.base/java.time.LocalDate=ALL-UNNAMED
						--add-opens
						java.base/java.time.LocalDateTime=ALL-UNNAMED
						--add-opens
						java.base/java.time.LocalDateTime.date=ALL-UNNAMED
						--enable-preview
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>
								io.mosip.biometrics.util.test.BioUtilApplication.class</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven.dependency.plugin.version}</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/lib
							</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.resources.plugin.version}</version>
				<executions>
					<execution>
						<id>copy-resources-1</id>
						<!-- here the phase you need -->
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/BiometricInfo</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/BiometricInfo</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources-4</id>
						<!-- here the phase you need -->
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<filtering>true</filtering>
									<includes>
										<!-- what -->
										<include>application.properties</include>
										<include>run.sh</include>
										<include>
											run_convert_face_JP2000_JPEG.bat</include>
										<include>run_convert_face_JP2000_PNG.bat</include>
										<include>
											run_convert_iris_JP2000_JPEG.bat</include>
										<include>run_convert_iris_JP2000_PNG.bat</include>
										<include>
											run_convert_finger_JP2000_JPEG.bat</include>
										<include>
											run_convert_finger_JP2000_PNG.bat</include>
										<include>run_convert_finger_WSQ_JPEG.bat</include>
										<include>run_convert_finger_WSQ_PNG.bat</include>
										<include>run_encoder_face_auth.bat</include>
										<include>
											run_encoder_face_registration.bat</include>
										<include>run_decoder_face.bat</include>
										<include>run_encoder_iris_auth.bat</include>
										<include>
											run_encoder_iris_registration.bat</include>
										<include>run_decoder_iris.bat</include>
										<include>
											run_encoder_finger_jp2000_registration.bat</include>
										<include>
											run_encoder_finger_jp2000_auth.bat</include>
										<include>run_encoder_finger_wsq_auth.bat</include>
										<include>run_decoder_finger_jp2000.bat</include>
										<include>run_decoder_finger_wsq.bat</include>
										<include>run_decoder_jp2000.bat</include>
										<include>run_bio_auth_decoder.bat</include>

										<include>run_nist_file_reader.bat</include>
										<include>
											run_nist_data_quality_analyser.bat</include>

										<include>run_rotate_face.bat</include>
										<include>run_rotate_finger.bat</include>
										<include>run_rotate_iris.bat</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>	
	
</project>
